--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+Thu Dec 16 01:13:03 2004  Tim Janik  <timj@gtk.org>
+
+	* beast-gtk/bstsnetrouter.c (bst_snet_router_init): removed BseSnooper
+	from toolbar, added oscillator and ADSR modules instead.
+	keep the toolbar module order specified toolbar_types at the GUI.
+
 Mon Dec 13 01:03:48 2004  Tim Janik  <timj@gtk.org>
 
 	* configure.in: version 0.6.4, binary 0, interface 0.
