--- a/sfi/ChangeLog
+++ b/sfi/ChangeLog
@@ -1,3 +1,8 @@
+Thu Dec 16 01:57:36 2004  Tim Janik  <timj@gtk.org>
+
+	* sfistore.c (sfi_rstore_new_open): fail to open directories,
+	block devices or symbolic links.
+
 Mon Dec  6 15:37:29 2004  Stefan Westerfeld  <stefan@space.twc.de>
 
 	* sfidl-generator.cc(splitName): Fix splitting of "Bse::FFTSize" to
