--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,10 @@
+Thu Dec 16 01:56:17 2004  Tim Janik  <timj@gtk.org>
+
+	* beast-gtk/bstmain.c (main): install user message dialog handler early 
+	enough to catch file loading errors.
+	use sfi_error() to signal file loading errors, instead of just status 
+	bar display.
+
 Thu Dec 16 01:13:03 2004  Tim Janik  <timj@gtk.org>
 
 	* beast-gtk/bstsnetrouter.c (bst_snet_router_init): removed BseSnooper
