--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+Thu Dec 16 03:37:38 2004  Tim Janik  <timj@gtk.org>
+
+	* beast-gtk/bstscrollgraph.c (bst_scrollgraph_finalize): free value
+	buffer.
+
 Thu Dec 16 03:02:10 2004  Tim Janik  <timj@gtk.org>
 
 	* beast-gtk/bstapp.c: sort demos by filename. support csynth and 
