--- a/drivers/bse-portaudio/README
+++ b/drivers/bse-portaudio/README
@@ -3,9 +3,9 @@ BSE Driver Package
 
 This is a BSE (Bedevilled Sound Engine) plugin/driver package.
 In order to build this package, you need recent versions
-of BSE (>=0.6.3) and PortAudioV19.
+of BSE (>=0.6.4) and PortAudioV19.
 
-PortAudio:
+PortAudio (>= V19):
   http://www.portaudio.com/
 
 The official ftp site for BEAST/BSE is:
