--- a/drivers/bse-portaudio/ChangeLog
+++ b/drivers/bse-portaudio/ChangeLog
@@ -1,3 +1,7 @@
+Thu Dec 16 14:45:36 2004  Stefan Westerfeld  <stefan@space.twc.de>
+
+	* README: Mention known issues with the driver.
+
 Mon Dec  6 22:47:48 2004  Stefan Westerfeld  <stefan@space.twc.de>
 
 	* bsepcmdevice-portaudio.cc: Use BSE_DEFINE_EXPORTS, which now works
