rewordeed the "Known Issues" section for clarity and to be worded on
Thu Dec 16 16:28:56 2004  Tim Janik  <timj@gtk.org>

        * README: rewordeed the "Known Issues" section for clarity and to
        be worded on behalf of the project. requested feedback to the beast
        mailing list.

svn path=/trunk/; revision=2944

--- a/drivers/bse-portaudio/README
+++ b/drivers/bse-portaudio/README
@@ -32,67 +32,69 @@ out via pkg-config with:
 
 For general installation instructions, see the file `INSTALL'.
 
-Known Issues with the Current Release
-=====================================
+Known Issues with this Version
+==============================
 
-* the driver doesn't yet work with the PortAudio JACK driver
+* The BSE-PortAdio driver doesn't yet work with the PortAudio JACK driver
 
   Although one of the motivations for implementing the PortAudioV19 support
-  was JACK support, it turned out that I needed to use PortAudios blocking
-  API for integrating with BEAST properly. You can read the discussion at
-  PortAudios list archive:
+  was JACK support, it turned out that we needed to use the PortAudios
+  blocking API for integrating with BEAST properly. This discussion can be
+  read at PortAudios list archive:
 
   http://techweb.rfa.org/pipermail/portaudio/2004-November/003979.html
 
-  Since the PortAudio JACK driver doesn't support blocking yet, I started to
-  work on a patch against PortAudio that will fix this. It works with my
-  locally modified version of PortAudio already, but I have some cleanup work
-  to do before I can submit it to the PortAudio Team for merging the patch.
+  Since the PortAudio JACK driver doesn't support blocking PCM access yet,
+  we started to work on a patch against PortAudio that will fix this.
+  We already got it working with a modified version of PortAudio, but
+  there's still some cleanup work to do before folding changes back to
+  the PortAudio Team. Once this happened, the PortAudio driver is supposed
+  to support JACK, OSS and ALSA.
+
+* The BSE-PortAdio driver depends on a CVS version of PortAudioV19
+
+  Since PortAudioV19 has not publically been released yet, this driver
+  currently depends on CVS snapshots which can be obtained from:
   
-  But once this happened, this PortAudio driver will support JACK, OSS and
-  ALSA. You can expect me to make the required patch against PortAudio
-  publically available soon.
+      http://www.portaudio.com/archives/pa_snapshot_v19.tar.gz
 
-* you need a CVS version of PortAudioV19
+* The BSE-PortAdio is largly untested
 
-  Since there is no released version of PortAudioV19, you need to grab a
-  snapshot from the CVS, which can be obtained at
+  Stefan Westerfeld only tested the driver in a local setup, so feedback
+  about non-working and working drivers is apprechiated.
+  It appears that some cards may not work when opened in readwrite mode
+  through PortAudio. This hasn't yet been completely investigated,
+  but PortAudio can be initialized using:
 
-  http://www.portaudio.com/archives/pa_snapshot_v19.tar.gz
+      $ beast -p portaudio=oss:0,wo
+  
+  to use the writeonly mode which really is supposed to work.
 
-  This is required since we use the blocking API, and the driver list
-  function, both of which were introduced at PortAudioV19.
+* The default device used may not be right
 
-* the driver is untested
+  BEAST requires the default device to be used to be listed first, but
+  the driver doesn't sort according to PortAudio defaults yet.
+  Thus starting BEAST with:
 
-  I only tested it here, so currently, I didn't receive user feedback. Please
-  supply feedback if possible. It appears that some cards may not work when
-  opened in readwrite mode through PortAudio. I didn't investigate this
-  completely, but you can initialize PortAudio using
-
-  beast -p portaudio=oss:0,wo
-
-  to use the writeonly mode. This should definitely work.
-
-* the default device used may not be right.
-
-  BEAST requires the default device to be used to be listed first, but I don't
-  sort according to PortAudio defaults yet. Thus if you say
-
-  beast -p portaudio
-
-  BEAST may or may not be using the default PortAudio driver. But for now, you
+      $ beast -p portaudio
+  
+  BEAST may or may not be using the default PortAudio driver. For now, you
   may want to explicitely specify the driver to use, since the "default"
-  option of my PortAudio driver is also not implemented correctly (it will
-  probably go away in the next release anyway).
+  option of the PortAudio driver is also not implemented correctly (it will
+  probably be removed in the next release anyway).
 
-* latency for the OSS driver is not too good
+* Latency for the OSS driver is not too good
 
   This appears to be PortAudios fault, because it doesn't initialize the
-  fragment settings of OSS in the correct way. Again, I didn't investigate
-  this too much, but I think PortAudio should be patched to fix this.
+  fragment settings of OSS correctly. Again, this hasn't been investigated
+  very deeply, but it looks like PortAudio should be patched to fix this.
 
-Please let me know any issues you have with the driver. I want to make it
-stable and solid as I receive feedback. Currently, this is work in progress.
-
-Stefan Westerfeld <stefan@space.twc.de>
+* Feedback request
+  
+  Please let us know any issues you have with the driver, as mentioned above,
+  we're interested in working and non-wroking driver reports.
+  Feedback should be send to the BEAST mailing list:
+  
+  	EMail:   beast@gnome.org
+  	List:    http://mail.gnome.org/mailman/listinfo/beast/
+  	Archive: http://mail.gnome.org/archives/beast/
