--- a/drivers/bse-portaudio/ChangeLog
+++ b/drivers/bse-portaudio/ChangeLog
@@ -1,3 +1,9 @@
+Thu Dec 16 16:28:56 2004  Tim Janik  <timj@gtk.org>
+
+	* README: rewordeed the "Known Issues" section for clarity and to
+	be worded on behalf of the project. requested feedback to the beast
+	mailing list.
+
 Thu Dec 16 14:45:36 2004  Stefan Westerfeld  <stefan@space.twc.de>
 
 	* README: Mention known issues with the driver.
