new documents, containing only block diagrams at the moment.
Fri Dec 17 15:56:43 2004  Tim Janik  <timj@gtk.org>

        * docs/architecture.texi: new documents, containing only block diagrams
        at the moment.

        * docs/beast-components.dia:
        * docs/beast-components.png: component block diagram.

        * docs/beast-progs.dia:
        * docs/beast-progs.png: prgram and library block diagram.

svn path=/trunk/; revision=2949

--- a/docs/beast-index.texi
+++ b/docs/beast-index.texi
@@ -24,6 +24,7 @@
 @anchor{development}
 @unnumbered Development Documents
 @itemize
+@item @uref{beast-doc://architecture,,  BEAST Architecture}
 @item @uref{beast-doc://plugin-devel,,  BSE Plugin Development}
 @item @uref{beast-doc://sfidl-manual,,  SFIDL - Manual}
 @item @uref{beast-doc://engine-mplan,,  DSP Synthesis Engine (Concepts)}
