--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,14 @@
+Fri Dec 17 15:56:43 2004  Tim Janik  <timj@gtk.org>
+
+	* docs/architecture.texi: new documents, containing only block diagrams
+	at the moment.
+
+	* docs/beast-components.dia:
+	* docs/beast-components.png: component block diagram.
+
+	* docs/beast-progs.dia:
+	* docs/beast-progs.png: prgram and library block diagram.
+
 Thu Dec 16 03:37:38 2004  Tim Janik  <timj@gtk.org>
 
 	* beast-gtk/bstscrollgraph.c (bst_scrollgraph_finalize): free value
