--- a/docs/architecture.texi
+++ b/docs/architecture.texi
@@ -3,7 +3,7 @@
 @settitle BEAST Architecture
 @footnotestyle end
 @c %**end of header
-@c revision-date: $Id: architecture.texi,v 1.2 2004/12/17 15:33:37 timj Exp $
+@c revision-date: $Id: architecture.texi,v 1.3 2004/12/17 15:34:28 timj Exp $
 
 @include texiutils.texi
 
@@ -61,6 +61,7 @@ audio synthesis package and related components.
 @item Song, track, part, mixer and wave objects
 @item Synthesis networks
 @item Sequencer (seperately threaded)
+@item Synthesis Engine (seperately threaded)
 @item Input output drivers for PCM and MIDI
 @item OSS MIDI and PCM driver
 @item Standard synthesis modules
