--- a/docs/site-links-synthesis.texi
+++ b/docs/site-links-synthesis.texi
@@ -102,7 +102,7 @@ Selected @uref{http://www.soundonsound.com,,Sound On Sound} Articles:
 	@uref{http://www.soundonsound.com/sos/feb04/articles/synthsecrets.htm,,Part58}
 	@uref{http://www.soundonsound.com/sos/mar04/articles/synthsecrets.htm,,Part59}
 	@uref{http://www.soundonsound.com/sos/apr04/articles/synthsecrets.htm,,Part60}
-	@c @uref{http://www.soundonsound.com/sos/may04/articles/synthsecrets.htm,,Part61}
+	@uref{http://www.soundonsound.com/sos/may04/articles/synthsecrets.htm,,Part61}
 	@c @uref{http://www.soundonsound.com/sos/jun04/articles/synthsecrets.htm,,Part62}
 	@c @uref{http://www.soundonsound.com/sos/jul04/articles/synthsecrets.htm,,Part63}
 	@c @uref{http://www.soundonsound.com/sos/aug04/articles/synthsecrets.htm,,Part64}
