--- a/NEWS
+++ b/NEWS
@@ -11,6 +11,7 @@ Overview of Changes in BEAST/BSE 0.6.4:
 * Updated British English translation [David Lodge]
 * Updated Czech translation [Miloslav Trmac]
 * Updated Dutch translation [Tino Meinen]
+* Updated Spanish translation [Jorge Gonzalez]
 
 Overview of Changes in BEAST/BSE 0.6.3:
 
