applied translation updates from Petrecca Michele.
Sat Dec 18 00:07:55 2004  Tim Janik  <timj@gtk.org>

        * it.po: applied translation updates from Petrecca Michele.

svn path=/trunk/; revision=2967

--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+Sat Dec 18 00:07:55 2004  Tim Janik  <timj@gtk.org>
+
+	* it.po: applied translation updates from Petrecca Michele.
+
 2004-12-17  Francisco Javier F. Serrador  <serrador@cvs.gnome.org>
 
 	* es.po: Updated Spanish translation by Jorge Gonzalez
