--- a/drivers/bse-alsa/ChangeLog
+++ b/drivers/bse-alsa/ChangeLog
@@ -1,3 +1,8 @@
+Sat Dec 18 00:09:49 2004  Tim Janik  <timj@gtk.org>
+
+	* configure.in: released 0.6.4, interface 0, binary 0.
+	CFLAGS and CXXFLAGS fixups.
+
 Thu Nov 18 15:10:33 2004  Tim Janik  <timj@gtk.org>
 
         * configure.in: released bse-alsa 0.6.3, binary 0, interface 0.
