--- a/drivers/bse-portaudio/ChangeLog
+++ b/drivers/bse-portaudio/ChangeLog
@@ -1,3 +1,8 @@
+Sat Dec 18 23:02:07 2004  Stefan Westerfeld  <stefan@space.twc.de>
+
+	* bsepcmdevice-portaudio.cc: Fix compiler warning: latency in frames
+	is a guint.
+
 Sat Dec 18 00:02:29 2004  Tim Janik  <timj@gtk.org>
 
 	* released 0.6.4.
