--- a/plugins/ChangeLog
+++ b/plugins/ChangeLog
@@ -1,3 +1,8 @@
+Sun Dec 19 00:21:27 2004  Tim Janik  <timj@gtk.org>
+
+	* davsyndrum.c (dav_syn_drum_update_modules): don't keep sample rate
+	specific fields in the BSE object.
+
 Thu Nov 18 13:34:56 2004  Tim Janik  <timj@gtk.org>
 
 	* davbassfilter.cc: fixed inverted trigger condition.
