--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+Sun Dec 19 02:21:33 2004  Tim Janik  <timj@gtk.org>
+
+	* beast-gtk/bstcanvassource.c (csource_info_update): added categories 
+	to info dialog.
+
 Sat Dec 18 00:12:31 2004  Tim Janik  <timj@gtk.org>
 
 	* configure.in: release 0.6.4, binary 0, interface 0.
