--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2004-12-19  Adam Weinberger  <adamw@gnome.org>
+
+	* en_CA.po: Updated Canadian English translation.
+
 Sat Dec 18 00:07:55 2004  Tim Janik  <timj@gtk.org>
 
 	* it.po: applied translation updates from Petrecca Michele.
