--- a/TODO
+++ b/TODO
@@ -1,4 +1,5 @@
 FIXME(urgent):
+- implement display of Note properties next to frequency properties (and nuke note properties from plugins)
 - loading bsewave overrides mixing frequencies from wav-file chunks with the default bsewave mix frequency
   (should only happen if mixfreq is specified per chunk)
 - ensure mixer and track setup for songs created via MIDI import
